--- a/pages/events-list.html
+++ b/pages/events-list.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>所有活動</title>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -44,9 +45,9 @@
         <a type="button" class="btn btn-outline-primary me-2 py-1 px-5 border-left-1 mb-2 fs-8 fs-sm-7">戶外</a>
         <a type="button" class="btn btn-outline-primary me-2 py-1 px-5 border-left-1 mb-2 fs-8 fs-sm-7">線上活動</a>
       </div>
-      <div class="row row-cols-1 row-cols-md-3 g-4 mb-60">
+      <div class="row row-cols-1 row-cols-md-3 g-4 mb-9">
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100 border-0">
+          <div class="card h-100 border-0" data-aos="flip-left">
             <div
               class="card-header fs-3 fs-xl-2 border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">19 MAY 2023</a>
@@ -75,7 +76,7 @@
           </div>
         </div>
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100  border-0">
+          <div class="card h-100  border-0" data-aos="flip-left">
             <div
               class="card-header fs-3 fs-xl-2 border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">23 MAY 2023</a>
@@ -102,7 +103,7 @@
           </div>
         </div>
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100 border-0">
+          <div class="card h-100 border-0" data-aos="flip-left">
             <div
               class="card-header fs-3 fs-xl-2 border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">30 MAY 2023</a>
@@ -130,7 +131,7 @@
           </div>
         </div>
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100 border-0">
+          <div class="card h-100 border-0" data-aos="flip-right">
             <div
               class="card-header fs-3 fs-xl-2 border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">12 June 2023</a>
@@ -157,7 +158,7 @@
           </div>
         </div>
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100 border-0">
+          <div class="card h-100 border-0" data-aos="flip-right">
             <div
               class="card-header fs-3 fs-xl-2 border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">25 June 2023</a>
@@ -184,7 +185,7 @@
           </div>
         </div>
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100 border-0">
+          <div class="card h-100 border-0" data-aos="flip-right">
             <div
               class="card-header fs-3 fs-xl-2 border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">9 July 2023</a>
@@ -210,7 +211,7 @@
           </div>
         </div>
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100 border-0">
+          <div class="card h-100 border-0" data-aos="flip-down">
             <div
               class="card-header fs-3 fs-xl-2 border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">19 MAY 2023</a>
@@ -237,7 +238,7 @@
           </div>
         </div>
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100 border-0">
+          <div class="card h-100 border-0" data-aos="flip-down">
             <div
               class="card-header fs-3 fs-xl-2 border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">19 MAY 2023</a>
@@ -264,7 +265,7 @@
           </div>
         </div>
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100 border-0">
+          <div class="card h-100 border-0" data-aos="flip-down">
             <div
               class="card-header fs-3 fs-xl-2 border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">18 MAY 2023</a>
@@ -291,7 +292,7 @@
           </div>
         </div>
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100 border-0">
+          <div class="card h-100 border-0" data-aos="flip-up">
             <div
               class="card-header fs-3 fs-xl-2 border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">19 MAY 2023</a>
@@ -318,7 +319,7 @@
           </div>
         </div>
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100 border-0">
+          <div class="card h-100 border-0" data-aos="flip-up">
             <div
               class="card-header fs-3 fs-xl-2 bg-transparent border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">19 MAY 2023</a>
@@ -345,7 +346,7 @@
           </div>
         </div>
         <div class="col mb-2 mb-sm-4">
-          <div class="card h-100 border-0">
+          <div class="card h-100 border-0" data-aos="flip-up">
             <div
               class="card-header fs-3 fs-xl-2 border-bottom border-3 border-primary pb-2 pb-sm-3 mb-4 mb-sm-3 pt-0 font-yeseva">
               <a href="single-active.html">19 MAY 2023</a>
@@ -393,7 +394,7 @@
         </div>
       </div>
       <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center mb-60">
+        <ul class="pagination justify-content-center mb-9">
           <li class="page-item">
             <a class="page-link bg-transparent border-1 border-primary mx-2"> 
               <i class="icofont-arrow-left"></i>
@@ -413,7 +414,14 @@
       </nav>
     </div>
     <%- include('./layout/footer'); -%>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 3000,
+        offset: 300,
+        delay: 400,
+      })
+    </script>
       <script type="module" src="../main.js"></script>
 </body>
 
