--- a/pages/pay.html
+++ b/pages/pay.html
@@ -76,7 +76,7 @@
                         <div class="d-flex flex-column align-items-center">
 
                             <a type="button"
-                                class="w-100 w-md-65 btn btn-primary fs-5 py-2 d-flex align-items-center justify-content-center hover-text-yellow mb-4" href="order-completed.html">確認訂單並繳費 $8000<span
+                                class="w-100 w-md-65 btn btn-primary fs-7 fs-sm-5 py-2 d-flex align-items-center justify-content-center hover-text-yellow mb-4" href="order-completed.html">確認訂單並繳費 $8000<span
                                     class="material-icons-outlined ms-1">
                                     keyboard_double_arrow_right
                                 </span></a>
