--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 <a type="button" class="btn btn-outline-primary  me-2 py-1 px-5 border-left-1">科技</a>
                 <a type="button" class="btn btn-outline-primary  me-2 py-1 px-5 border-left-1">有趣</a>
               </div>
-              <p>最近網路上很流行的AI程式 ChatGPT，可以用來聊天或是查詢、整理各種資料，不同的應用方式如雨後春筍般冒出來。<br>
+              <p class="mb-3 mb-sm-6">最近網路上很流行的AI程式 ChatGPT，可以用來聊天或是查詢、整理各種資料，不同的應用方式如雨後春筍般冒出來。<br>
                 這個活動讓大家把自己最有特色的使用方法提出來讓大家參考，也會投票出最有趣的用法。<br>
                 該讓其他人知道自己使用 ChatGPT 的姿勢才是最特別的那個了！</p>
             </div>
