--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     </div>
     <div class="border-bottom border-top border-2 border-primary">
       <div class="container text-center" data-aos="fade-up"
-      data-aos-duration="3000">
+      data-aos-offset="300">
         <p class="fs-6 fs-sm-3 pt-8 pt-sm-9 mb-4 fw-bold">此刻打盹，你將做夢；此刻學習，你將圓夢</p>
         <p class="fs-8 fs-sm-7 mb-8 mb-sm-9">——我也不知道誰說的</p>
       </div>
